SID:391: SID-1000 Video thumbnail overlapping meta text on edit, SID-1003 research space icon UI bug after initial icon add

--- a/workbench/css/workbench.css
+++ b/workbench/css/workbench.css
@@ -139,10 +139,10 @@ li a.not-owned {
 .sidora-info-holder {
   display: none;
 }
-a.has-thumbnail > div {
+div.concept-thumbnail {
   float: left;
 }
-a.has-thumbnail > div > img {
+div.concept-thumbnail > img {
   vertical-align: sub;
 }
 .full-screen-overlay {
